; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ngctl/extr_debug.c_DebugCmd.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ngctl/extr_debug.c_DebugCmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"+\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"-\00", align 1
@CMDRTN_USAGE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [27 x i8] c"Current debug level is %d\0A\00", align 1
@CMDRTN_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**)* @DebugCmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DebugCmd(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i32, i32* %4, align 4
  switch i32 %7, label %42 [
    i32 2, label %8
    i32 1, label %39
  ]

8:                                                ; preds = %2
  %9 = load i8**, i8*** %5, align 8
  %10 = getelementptr inbounds i8*, i8** %9, i64 1
  %11 = load i8*, i8** %10, align 8
  %12 = call i32 @strcmp(i8* %11, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %8
  %15 = call i32 @NgSetDebug(i32 -1)
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %6, align 4
  br label %36

17:                                               ; preds = %8
  %18 = load i8**, i8*** %5, align 8
  %19 = getelementptr inbounds i8*, i8** %18, i64 1
  %20 = load i8*, i8** %19, align 8
  %21 = call i32 @strcmp(i8* %20, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %17
  %24 = call i32 @NgSetDebug(i32 -1)
  %25 = sub nsw i32 %24, 1
  store i32 %25, i32* %6, align 4
  br label %35

26:                                               ; preds = %17
  %27 = load i8**, i8*** %5, align 8
  %28 = getelementptr inbounds i8*, i8** %27, i64 1
  %29 = load i8*, i8** %28, align 8
  %30 = call i32 @atoi(i8* %29)
  store i32 %30, i32* %6, align 4
  %31 = icmp slt i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %26
  %33 = load i32, i32* @CMDRTN_USAGE, align 4
  store i32 %33, i32* %3, align 4
  br label %46

34:                                               ; preds = %26
  br label %35

35:                                               ; preds = %34, %23
  br label %36

36:                                               ; preds = %35, %14
  %37 = load i32, i32* %6, align 4
  %38 = call i32 @NgSetDebug(i32 %37)
  br label %44

39:                                               ; preds = %2
  %40 = call i32 @NgSetDebug(i32 -1)
  %41 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0), i32 %40)
  br label %44

42:                                               ; preds = %2
  %43 = load i32, i32* @CMDRTN_USAGE, align 4
  store i32 %43, i32* %3, align 4
  br label %46

44:                                               ; preds = %39, %36
  %45 = load i32, i32* @CMDRTN_OK, align 4
  store i32 %45, i32* %3, align 4
  br label %46

46:                                               ; preds = %44, %42, %32
  %47 = load i32, i32* %3, align 4
  ret i32 %47
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @NgSetDebug(i32) #1

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
